--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -73,14 +73,14 @@
         height: 24px;
     }
 
-    /* ==== BRILLO QUE SIGUE EL CURSOR ==== */
+    /* ==== BRILLO MÁS PEQUEÑO QUE SIGUE EL CURSOR ==== */
     .download-link::after {
         content: '';
         position: absolute;
         top: var(--y, 50%);
         left: var(--x, 50%);
-        width: 200px;
-        height: 200px;
+        width: 120px; /* reducido de 200px a 120px */
+        height: 120px; /* reducido de 200px a 120px */
         background: radial-gradient(circle, rgba(255,255,255,0.6) 0%, transparent 80%);
         transform: translate(-50%, -50%);
         pointer-events: none;
