--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -73,15 +73,16 @@
         height: 24px;
     }
 
-    /* ==== BRILLO MÁS PEQUEÑO QUE SIGUE EL CURSOR ==== */
+    /* ==== BRILLO CIRCULAR MÁS PEQUEÑO QUE SIGUE EL CURSOR ==== */
     .download-link::after {
         content: '';
         position: absolute;
         top: var(--y, 50%);
         left: var(--x, 50%);
-        width: 120px; /* reducido de 200px a 120px */
-        height: 120px; /* reducido de 200px a 120px */
-        background: radial-gradient(circle, rgba(255,255,255,0.6) 0%, transparent 80%);
+        width: 100px; /* un poquito más pequeño */
+        height: 100px; /* un poquito más pequeño */
+        background: radial-gradient(circle at center, rgba(255,255,255,0.6) 0%, rgba(255,255,255,0.0) 70%);
+        border-radius: 50%; /* asegura círculo perfecto */
         transform: translate(-50%, -50%);
         pointer-events: none;
         opacity: 0;
