--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -177,7 +177,7 @@
 
     .carousel {
         position: relative;
-        max-width: 600px;
+        max-width: 900px; /* aumentado para carrusel más grande */
         margin: 30px auto;
         overflow: hidden;
         border-radius: 12px;
