--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -79,10 +79,10 @@
         position: absolute;
         top: var(--y, 50%);
         left: var(--x, 50%);
-        width: 100px; /* un poquito más pequeño */
-        height: 100px; /* un poquito más pequeño */
+        width: 100px;
+        height: 100px;
         background: radial-gradient(circle at center, rgba(255,255,255,0.6) 0%, rgba(255,255,255,0.0) 70%);
-        border-radius: 50%; /* asegura círculo perfecto */
+        border-radius: 50%;
         transform: translate(-50%, -50%);
         pointer-events: none;
         opacity: 0;
@@ -177,7 +177,7 @@
 
     .carousel {
         position: relative;
-        max-width: 900px; /* aumentado para carrusel más grande */
+        max-width: 900px;
         margin: 30px auto;
         overflow: hidden;
         border-radius: 12px;
@@ -225,6 +225,74 @@
     .carousel-arrow-right {
         right: 10px;
     }
+
+    /* ==== NUEVA SECCIÓN DE PRODUCTOS ==== */
+    .products-section {
+        max-width: 1100px;
+        margin: 50px auto 40px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+        text-align: left;
+    }
+
+    .product-card {
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .product-card:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+
+    .product-card h3 {
+        margin-top: 0;
+        color: #007bff;
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    .product-card p {
+        margin: 6px 0;
+        font-size: 14px;
+        color: #333;
+    }
+
+    .product-card .price {
+        font-weight: bold;
+        color: #1a1a1a;
+        margin-top: 8px;
+    }
+
+    /* ==== BOTON FLotante WhatsApp ==== */
+    .whatsapp-float {
+        position: fixed;
+        bottom: 30px;
+        right: 30px;
+        width: 60px;
+        height: 60px;
+        background-color: #25d366;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 10000;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+        transition: transform 0.2s;
+    }
+
+    .whatsapp-float:hover {
+        transform: scale(1.1);
+    }
+
+    .whatsapp-float img {
+        width: 35px;
+        height: 35px;
+    }
 </style>
 </head>
 <body>
@@ -268,6 +336,56 @@
     </div>
     <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
 </div>
+
+<!-- ==== NUEVA SECCIÓN DE PRODUCTOS ==== -->
+<div class="products-section">
+    <div class="product-card">
+        <h3>Software de Diseño</h3>
+        <p>Herramientas independientes para diseño gráfico y proyectos visuales.</p>
+        <p class="price">Desde S/. 15 (Perú) / CLP 9.500 (Chile)</p>
+        <p>Suite de Creatividad (1 año): S/. 195 (Perú) / CLP 69.500 (Chile)</p>
+    </div>
+    <div class="product-card">
+        <h3>Ofimática y Herramientas de Oficina</h3>
+        <p>Aplicaciones para documentos, hojas de cálculo y presentaciones.</p>
+        <p class="price">Licencia permanente: Desde S/. 15 (Perú) / CLP 9.500 (Chile)</p>
+    </div>
+    <div class="product-card">
+        <h3>PDF Profesional</h3>
+        <p>Crear, editar y convertir archivos PDF de manera segura.</p>
+        <p class="price">Licencia permanente: Desde S/. 15 (Perú) / CLP 9.500 (Chile)</p>
+    </div>
+    <div class="product-card">
+        <h3>Antivirus Profesional</h3>
+        <p>Protección completa contra virus y malware por 1 año, actualizaciones automáticas incluidas.</p>
+        <p class="price">Desde S/. 35 (Perú) / CLP 15.000 (Chile)</p>
+    </div>
+    <div class="product-card">
+        <h3>Suite de Ingeniería / CAD Profesional</h3>
+        <p>Modelado 3D y diseño técnico para ingeniería y arquitectura.</p>
+        <p class="price">1 año: S/. 65 / CLP 15.500 | 2 años: S/. 85 / CLP 25.900</p>
+    </div>
+    <div class="product-card">
+        <h3>Edición de Video</h3>
+        <p>Software para creación y edición de videos profesionales.</p>
+        <p class="price">Desde S/. 20 (Perú) / CLP 9.800 (Chile)</p>
+    </div>
+    <div class="product-card">
+        <h3>Música y Producción</h3>
+        <p>Grabación y edición de audio profesional.</p>
+        <p class="price">Desde S/. 20 (Perú) / CLP 9.500 (Chile)</p>
+    </div>
+    <div class="product-card">
+        <h3>Otros Programas Especializados</h3>
+        <p>La mayoría de productos profesionales del mercado.</p>
+        <p class="price">Consulte por el programa o licencia que busca.</p>
+    </div>
+</div>
+
+<!-- ==== BOTON WhatsApp ==== -->
+<a href="https://wa.me/51945482880" target="_blank" class="whatsapp-float">
+    <img src="whatsapp-icon.png" alt="WhatsApp">
+</a>
 
 <script>
     const gif = document.getElementById('downloadGif');
@@ -364,7 +482,6 @@
             btn.classList.remove('active');
         });
     });
-
 </script>
 
 <footer>
