--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -371,7 +371,7 @@
         <h3>Software de Diseño</h3>
         <p>Herramientas independientes para diseño gráfico y proyectos visuales.</p>
         <p class="price">S/. 15 (Perú) / CLP 9.500 (Chile)</p>
-        <p class="price">Suite de Creatividad (1 año): S/. 195 / CLP 69.500</p>
+        <p class="price">Suite de Creatividad (1 año): S/. 195 (Perú) / CLP 69.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
@@ -379,7 +379,7 @@
     <div class="product-card">
         <h3>Ofimática y Herramientas de Oficina</h3>
         <p>Aplicaciones para documentos, hojas de cálculo y presentaciones.</p>
-        <p class="price">Licencia permanente: S/. 15 / CLP 9.500</p>
+        <p class="price">Licencia permanente: S/. 15 (Perú) / CLP 9.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
@@ -387,7 +387,7 @@
     <div class="product-card">
         <h3>PDF Profesional</h3>
         <p>Crear, editar y convertir archivos PDF de manera segura.</p>
-        <p class="price">Licencia permanente: S/. 15 / CLP 9.500</p>
+        <p class="price">Licencia permanente: S/. 15 (Perú) / CLP 9.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
@@ -395,7 +395,7 @@
     <div class="product-card">
         <h3>Antivirus Profesional</h3>
         <p>Protección completa contra virus y malware por 1 año, actualizaciones automáticas incluidas.</p>
-        <p class="price">S/. 35 / CLP 15.000</p>
+        <p class="price">S/. 35 (Perú) / CLP 15.000 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
@@ -403,8 +403,8 @@
     <div class="product-card">
         <h3>Suite de Ingeniería / CAD Profesional</h3>
         <p>Modelado 3D y diseño técnico para ingeniería y arquitectura.</p>
-        <p class="price">1 año: S/. 65 / CLP 15.500</p>
-        <p class="price">2 años: S/. 85 / CLP 25.900</p>
+        <p class="price">1 año: S/. 65 (Perú) / CLP 15.500 (Chile)</p>
+        <p class="price">2 años: S/. 85 (Perú) / CLP 25.900 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
@@ -412,7 +412,7 @@
     <div class="product-card">
         <h3>Edición de Video</h3>
         <p>Software para creación y edición de videos profesionales.</p>
-        <p class="price">S/. 20 / CLP 9.800</p>
+        <p class="price">S/. 20 (Perú) / CLP 9.800 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
@@ -420,7 +420,7 @@
     <div class="product-card">
         <h3>Música y Producción</h3>
         <p>Grabación y edición de audio profesional.</p>
-        <p class="price">S/. 20 / CLP 9.500</p>
+        <p class="price">S/. 20 (Perú) / CLP 9.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
