--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -225,7 +225,7 @@
         right: 10px;
     }
 
-    /* ==== NUEVA SECCIÓN DE PRODUCTOS ==== */
+    /* ==== SECCIÓN DE PRODUCTOS ==== */
     .products-section {
         max-width: 1100px;
         margin: 50px auto 40px;
@@ -365,70 +365,77 @@
     <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
 </div>
 
-<!-- ==== NUEVA SECCIÓN DE PRODUCTOS ==== -->
+<!-- ==== SECCIÓN DE PRODUCTOS REFORMATEADA ==== -->
 <div class="products-section">
     <div class="product-card">
         <h3>Software de Diseño</h3>
         <p>Herramientas independientes para diseño gráfico y proyectos visuales.</p>
-        <p class="price">S/. 15 (Perú) / CLP 9.500 (Chile)</p>
-        <p class="price">Suite de Creatividad (1 año): S/. 195 (Perú) / CLP 69.500 (Chile)</p>
+        <p class="price">- S/. 15 (Perú) / CLP 9.500 (Chile)</p>
+        <p class="price">- Suite de Creatividad (1 año): S/. 195 (Perú) / CLP 69.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
     </div>
+
     <div class="product-card">
         <h3>Ofimática y Herramientas de Oficina</h3>
         <p>Aplicaciones para documentos, hojas de cálculo y presentaciones.</p>
-        <p class="price">Licencia permanente: S/. 15 (Perú) / CLP 9.500 (Chile)</p>
+        <p class="price">- Licencia permanente: S/. 15 (Perú) / CLP 9.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
     </div>
+
     <div class="product-card">
         <h3>PDF Profesional</h3>
         <p>Crear, editar y convertir archivos PDF de manera segura.</p>
-        <p class="price">Licencia permanente: S/. 15 (Perú) / CLP 9.500 (Chile)</p>
+        <p class="price">- Licencia permanente: S/. 15 (Perú) / CLP 9.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
     </div>
+
     <div class="product-card">
         <h3>Antivirus Profesional</h3>
         <p>Protección completa contra virus y malware por 1 año, actualizaciones automáticas incluidas.</p>
-        <p class="price">S/. 35 (Perú) / CLP 15.000 (Chile)</p>
+        <p class="price">- S/. 35 (Perú) / CLP 15.000 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
     </div>
+
     <div class="product-card">
         <h3>Suite de Ingeniería / CAD Profesional</h3>
         <p>Modelado 3D y diseño técnico para ingeniería y arquitectura.</p>
-        <p class="price">1 año: S/. 65 (Perú) / CLP 15.500 (Chile)</p>
-        <p class="price">2 años: S/. 85 (Perú) / CLP 25.900 (Chile)</p>
+        <p class="price">- 1 año: S/. 65 (Perú) / CLP 15.500 (Chile)</p>
+        <p class="price">- 2 años: S/. 85 (Perú) / CLP 25.900 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
     </div>
+
     <div class="product-card">
         <h3>Edición de Video</h3>
         <p>Software para creación y edición de videos profesionales.</p>
-        <p class="price">S/. 20 (Perú) / CLP 9.800 (Chile)</p>
+        <p class="price">- S/. 20 (Perú) / CLP 9.800 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
     </div>
+
     <div class="product-card">
         <h3>Música y Producción</h3>
         <p>Grabación y edición de audio profesional.</p>
-        <p class="price">S/. 20 (Perú) / CLP 9.500 (Chile)</p>
+        <p class="price">- S/. 20 (Perú) / CLP 9.500 (Chile)</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
     </div>
+
     <div class="product-card">
         <h3>Otros Programas Especializados</h3>
         <p>La mayoría de productos profesionales del mercado.</p>
-        <p class="price">Consulte por el programa o licencia que busca</p>
+        <p class="price">- Consulte por el programa o licencia que busca</p>
         <a href="https://wa.me/51945482880" target="_blank" class="whatsapp-btn">
             <img src="whatsapp-icon.png" alt=""> Consultar
         </a>
@@ -512,36 +519,23 @@
     track.addEventListener('touchmove', e => {
         if(!isDragging) return;
         const moveX = e.touches[0].clientX;
-        const diff = startX - moveX;
-        if(diff > 50){ index = (index + 1) % total; updateCarousel(); isDragging=false; }
-        else if(diff < -50){ index = (index - 1 + total) % total; updateCarousel(); isDragging=false; }
+        const diff = moveX - startX;
+        track.style.transform = `translateX(${-index*100 + diff/track.clientWidth*100}%)`;
     });
 
-    track.addEventListener('touchend', () => { isDragging = false; });
-
-    const buttons = document.querySelectorAll('.download-link');
-    buttons.forEach(btn => {
-        btn.addEventListener('mousemove', e => {
-            const rect = btn.getBoundingClientRect();
-            const x = e.clientX - rect.left;
-            const y = e.clientY - rect.top;
-            btn.style.setProperty('--x', x + 'px');
-            btn.style.setProperty('--y', y + 'px');
-            btn.classList.add('active');
-        });
-        btn.addEventListener('mouseleave', () => {
-            btn.classList.remove('active');
-        });
+    track.addEventListener('touchend', e => {
+        isDragging = false;
+        const endX = e.changedTouches[0].clientX;
+        const diff = endX - startX;
+        if(diff > 50) index = (index - 1 + total) % total;
+        else if(diff < -50) index = (index + 1) % total;
+        updateCarousel();
     });
 </script>
 
 <footer>
-    <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
-    <p>© 2025 Robert Software. Todos los derechos reservados.</p>
-    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
-        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
-        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
-    </p>
+    <p>© Robert Software | WhatsApp: 945482880 | Instagram: <a href="https://www.instagram.com/robert.softwar">robert.softwar</a> | Página Web: <a href="http://www.robert-software.com">www.robert-software.com</a></p>
+    <p>Este software se distribuye con fines educativos y de soporte técnico profesional.</p>
 </footer>
 
 </body>
