--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -270,9 +270,8 @@
         margin-top: 8px;
     }
 
-    .product-card .price::before {
-        content: "- ";
-    }
+    /* Eliminado ::before para que no aparezca doble guion */
+    /* .product-card .price::before { content: "- "; } */
 
     .product-card .whatsapp-btn {
         margin-top: 12px;
